// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema.storage;

option go_package = "namespacelabs.dev/foundation/schema/storage";

import "schema/runtime.proto";

message LogRef {
    string        package_name   = 1;
    string        container_name = 2;
    ContainerKind container_kind = 4;
    string        log_file       = 3;
    uint64        log_size       = 5;
}

message ContentRef {
    // Name references a content object in storage.
    string name = 1;

    // Content-Type header value specifying the content type.
    // For. E.g. "application/json" or "application/tar+gzip".
    string content_type = 2;
  
    bytes content = 3;
  }
